# bulletin

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: check.yaml
configuration/: base.toml  local.toml  production.toml  staging.toml
migrations/: 20250710222147_create_subscriptions_table.sql  20250711222857_make_status_not_null_in_subscriptions.sql  20250711223040_create_subscription_tokens_table.sql
scripts/: init.nix
src/: configuration.rs  email_client.rs  error.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health.rs  mod.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health.rs
tests/api/: health.rs  helpers.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs
