[package]
name = "bulletin"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 2 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "bulletin"

[dependencies]
axum = { version = "0.8", features = ["form"] }
mime = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.tokio]
version = "1"
default-features = false
features = ["macros", "rt-multi-thread"]

[dev-dependencies]
anyhow = "1.0.98"
axum-server = "0.7"

[dev-dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]
