[package]
name = "bulletin"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 2 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "bulletin"

[dependencies]
axum = { version = "0.8", features = ["form"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
mime = "0.3"
opentelemetry = "0.30"
opentelemetry-otlp = "0.30"
opentelemetry-stdout = "0.30"
opentelemetry_sdk = "0.30"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-opentelemetry = "0.31"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uuid = { version = "1", features = ["v4"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "chrono",
  "macros",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
]

[dependencies.tokio]
version = "1"
default-features = false
features = ["macros", "rt-multi-thread"]

[dev-dependencies]
anyhow = "1.0.98"
axum-server = "0.7"
sqlx = { version = "0.8", default-features = false, features = ["migrate"] }

[dev-dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]
